Descomplicando_Kubernetes/day-13/ingress-locust.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-locust
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: locust-giropops
            port:
              number: 80
